# luban

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  docker-compose.yml  install.sh
.github/workflows/: build.yml  docker.yml
admin-ui/: index.html  package.json  pnpm-lock.yaml  preview.html  tailwind.config.js  vite.config.ts
admin-ui/src/: App.tsx  index.css  main.tsx  preview.tsx
admin-ui/src/api/: auth.ts  client.ts  credentials.ts  settings.ts  usage.ts
admin-ui/src/components/: access-settings.tsx  add-account.tsx  credential-card.tsx  login-page.tsx  usage-panel.tsx
admin-ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  sonner.tsx  switch.tsx  textarea.tsx
admin-ui/src/lib/: utils.ts
src/: admin_ui.rs  auth.rs  config.rs  credentials.rs  main.rs  oauth.rs  pricing.rs  proxy.rs  store.rs  web.rs
