[package]
name = "luban"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = "0.8.9"
base64 = "0.22.1"
clap = { version = "4.6.4", features = ["derive", "env"] }
dirs = "6.0.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
mime_guess = "2"
parking_lot = "0.12.5"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "stream"] }
rusqlite = { version = "0.34", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
sha2 = "0.11.0"
tokio = { version = "1.53.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono", "env-filter"] }
